--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -190,7 +190,7 @@ hr.small {
   width: 100%;
   height: 400px;
   color: #fff;
-  background: url(../img/callout.jpg) no-repeat center center scroll;
+  background: url(../img/1.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
