--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -6,9 +6,21 @@
 
 /* Global Styles */
 
+
+
 html, body {
   width: 100%;
   height: 100%;
+}
+
+.logo {
+	float:left;
+}
+
+/* --- menu --- */
+
+.navigation {
+  float: right;
 }
 
 body {
@@ -149,6 +161,31 @@ hr.small {
   padding: 15px 20px;
 }
 
+.header-cover {
+  position: relative;
+  display: table;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(44,62,80 , 0.5 ) !important;
+}
+.portifolio-cover {
+  padding: 50px 0;
+  position: relative;
+  display: table;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(44,62,80 , 0.5 ) !important;
+}
+
+.nav-style {
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+  max-width: 85%;
+}
+.btn{
+  background-color: transparent;
+}
 
 /* Header */
 
@@ -157,7 +194,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/bg.jpg) no-repeat center center scroll;
+  background: url(../img/new-bg.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -196,12 +233,77 @@ hr.small {
   -o-background-size: cover;
   background-size: cover;
 }
+.name-right {
+  padding-top: 15%;
+  text-align: left;
+  padding-left: 30px;
+}
+.job-right{
+  text-align: left;
+  padding-left: 50px;
+}
+
+.e-photo {
+  display: inline-block;
+  max-width: 265px;
+  max-height: 265px;
+  min-height: 265px;
+  min-width: 265px;
+  border-radius: 50%;
+  margin-left: 6px;
+}
+
+.b-quote {
+  display: block;
+  max-width: 490px;
+  padding: 25px;
+  margin-top: 10%;
+  margin-right: 0px;
+  border-radius: 4px;
+  background: rgba(251, 176, 59, 1);
+}
+.b-quote-after {
+  content: '';
+  width: 0;
+  height: 0;
+  margin-top: -15px;
+  right: -10px;
+  top: 50%;
+  position: absolute;
+  border-style: solid;
+  border-width: 30px 30px 0 0;
+  border-color: rgba(251, 176, 59, 1) transparent transparent transparent;
+}
+.e-quotes {
+  margin: 0;
+  font-size: 18px;
+  font-style: italic;
+  line-height: 30px;
+}
 
 
 /* Portfolio */
 
 .portfolio {
-  padding: 50px 0;
+  background: url(../img/portifolio-bg.jpg) no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.team {
+  background: url(../img/our_team.jpg) no-repeat center center scroll;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+.team-cover {
+  position: relative;
+  display: table;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(44,62,80 , 0.8 ) !important;
 }
 
 .portfolio-item {
