edit mobile styles

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -5,7 +5,70 @@
  */
 
 /* Global Styles */
+.team_text_rigth {
+  text-align: right;
+  padding: 0px
+}
+.menu-toggle {
+  display: none;
+}
+.team_text_rigth_name {
+  padding-top: 30%
+}
+.team_text_rigth_job {
+  padding-right: 20px;
+}
+.team_last_row_name {
+  padding-top: 10%;
+}
+.team_last_row_job {
+  padding-right: 35px;
+}
+.team_header {
+  margin-left: 20%;
+  margin-top: 70px;
+  margin-bottom: 70px;
+}
 
+.team_managment_title {
+  width: 70%;
+  height: 70%;
+  margin-top: 24%;
+  margin-left: 50%;
+}
+.menu-dispaly {
+  display: inline;
+}
+
+
+@media (min-width: 400px) and (max-width: 600px) {
+  .menu-toggle {
+    display: inline;
+  }
+  .menu-dispaly {
+    display: none;
+  }
+}
+
+@media (min-width: 2000px) {
+	.navbar-inner {
+		width:100%;
+	}
+	#topnav .navbar-inner .container .logo {
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+	}
+	.default {
+	position: fixed;
+	background:white;
+	top:0;
+	left: 0;
+	width: 100%;
+	}
+
+}
 
 
 html, body {
